# aitudes

./: .bazelrc  .coderabbit.yaml  .envrc  .gitignore  .pre-commit-config.yaml  AGENT.md  BUILD.bazel  CLAUDE.md  DEVELOPMENT_GUIDE.md  LICENSE  Makefile  PLAN.md  QUICK_REFERENCE.md  README.md  SETUP.md  WORKSPACE  flake.nix  pyproject.toml  requirements.txt
.cursor/rules/: clean-code.mdc
.github/: copilot-instructions.md
.zed/: settings.json
libs/: BUILD.bazel
libs/swarm/: BUILD.bazel  dummy_test.py  main.py  models.py  test_types.py  test_utils.py  types.py  utils.py
libs/swarm/utils/: BUILD.bazel  __init__.py  tqdm.py
mcp-servers/: server.py
spring-ai-starter/: build.gradle.kts  compose.yaml  settings.gradle.kts
spring-ai-starter/src/main/java/com/aitudes/spring_ai_starter/: SpringAiStarterApplication.java
spring-ai-starter/src/main/resources/: application-dev.yml  application.properties
spring-ai-starter/src/test/java/com/aitudes/spring_ai_starter/: SpringAiStarterApplicationTests.java  TestSpringAiStarterApplication.java  TestcontainersConfiguration.java
utils/: __init__.py  tqdm.py
