# BUILD.bazel for libs directory
# Aggregates all libraries in the monorepo

package(default_visibility = ["//visibility:public"])

# Aggregate all libraries
alias(
    name = "all",
    actual = "//libs/swarm:swarm",
)

# Aggregate all tests
alias(
    name = "test_all",
    actual = "//libs/swarm:test",
)
